@@ -23,14 +23,12 @@ defined('_TCMS_VALID') or die('Restricted access');
  *
  * This module is used as a base content loader.
  *
- * @version 0.8.5
+ * @version 0.8.8
  * @author	Jonathan Naumann <jonathan@toenda.com>
  * @package toendaCMS
  * @subpackage Content Modules
  */
 
-
-using('toendacms.datacontainer.content');
 
 if(!isset($ws_auth)) {
 	$ws_auth = 0;
@@ -39,6 +37,17 @@ if(!isset($ws_auth)) {
 if(!isset($page)) {
 	$page = 1;
 }
+
+if($tcms_main->isReal($news)) {
+	$gc = $tcms_dcp->getGlobalContentDC($id, $getLang, $is_admin, $news);
+}
+else {
+	$gc = $tcms_dcp->getGlobalContentDC($id, $getLang, $is_admin);
+}
+
+echo '<hr class="hr_line">'.$gc->getTitle().'<br>';
+echo $gc->getSubtitle().'<br>';
+echo $gc->getText().'<hr class="hr_line">';
 
 
 
