@@ -28,7 +28,7 @@ Version 2.0
 Developer Version
 	- 1.9.0 Development
 
-Building Steps: 4475
+Building Steps: 4490
 
 
 
@@ -73,6 +73,8 @@ Building Steps: 4475
           - Imagegallery (album list table header, album list entry, imagelist for list
             view, imagelist for thumbnail view)
           - Download (table header, category entry, download entry)
+ - added: Global Content datacontainer to get the id, title, subtitle, text and footnote of
+          each content element.
  - added: 
  
 
